k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medinovai-1in-kubernetes
  namespace: medinovai-prod
  labels:
    app: medinovai-1in-kubernetes
    tier: tier2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: medinovai-1in-kubernetes
  template:
    metadata:
      labels:
        app: medinovai-1in-kubernetes
        tier: tier2
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: medinovai-1in-kubernetes
        image: registry.medinovai.health/medinovai-1in-kubernetes:v3.0.0-alpha
        ports:
        - containerPort: 8080
